# TripAI-Multi-Agent-AI-Travel-Planner

./: .env  .gitignore  CLAUDE.md  Dockerfile  README.md  airbnb-results.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh  package-lock.json  playwright-mcp.config.json  pyproject.toml  travel_runs.db  travel_runs.db-shm  travel_runs.db-wal  ui.py
.claude/: settings.json
.playwright-mcp/: page-2026-04-29T21-11-47-584Z.yml  page-2026-04-29T21-11-51-338Z.yml  page-2026-04-29T21-11-53-424Z.yml  page-2026-04-29T21-11-57-616Z.yml  page-2026-04-29T21-12-04-988Z.yml  page-2026-04-29T21-12-09-476Z.yml  page-2026-04-29T21-13-57-030Z.yml  page-2026-04-29T21-15-26-445Z.yml  page-2026-04-29T21-16-05-584Z.yml  page-2026-04-29T21-18-03-342Z.yml  page-2026-04-29T21-30-37-815Z.yml  page-2026-04-29T21-30-41-627Z.yml  page-2026-04-29T21-31-37-048Z.yml  page-2026-04-29T21-32-34-739Z.yml  page-2026-04-29T21-32-59-071Z.yml  page-2026-04-29T21-38-04-587Z.yml  page-2026-04-29T21-38-06-010Z.yml  page-2026-04-29T21-38-43-864Z.yml  page-2026-04-29T21-39-23-391Z.yml  page-2026-04-30T19-52-15-763Z.yml  page-2026-04-30T19-52-22-837Z.yml  page-2026-04-30T19-52-40-883Z.yml  page-2026-04-30T19-52-47-057Z.yml  page-2026-04-30T19-52-54-683Z.yml  page-2026-04-30T19-53-15-462Z.yml  page-2026-04-30T19-53-25-603Z.yml  page-2026-04-30T19-53-43-482Z.yml  page-2026-04-30T20-14-08-960Z.yml  page-2026-04-30T20-14-27-295Z.yml  page-2026-04-30T20-14-34-865Z.yml  page-2026-04-30T20-14-38-832Z.yml  page-2026-04-30T20-14-44-223Z.yml  page-2026-04-30T20-14-52-828Z.yml  page-2026-04-30T20-14-59-282Z.yml  (+100 more)
(+27 files in other folders)
