[project]
name = "claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.93.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.3",
    "mcp[cli]>=1.27.0",
    "playwright>=1.59.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
    "boto3>=1.35.0",
]
